--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
             <h2>Entretenimento</h2>
             <div class="articles">
                 <article>
-                    <img src="./imagens/mercado-entretenimento.jpg" alt="Muitos dólares" />
+                    <img src="./imagens/mercado-entretenimento.jpg" alt="Serviços de Streaming" />
                     <header>
                         <time>13/07/2022 às 12:35</time>
                     </header>
@@ -125,7 +125,7 @@
                     <a href="#" title="Leia a notícia completa">Ler mais</a>
                 </article>
                 <article>
-                    <img src="./imagens/streaming.jpg" alt="Várias notas de euro" />
+                    <img src="./imagens/streaming.jpg" alt="Streaming no Brasil" />
                     <header>
                         <time>13/07/2022 às 12:35</time>
                     </header>
@@ -136,7 +136,7 @@
                     <a href="#" title="Leia a notícia completa">Ler mais</a>
                 </article>
                 <article>
-                    <img src="./imagens/jogos.jpg" alt="Extração de petróleo" />
+                    <img src="./imagens/jogos.jpg" alt="Controle de Xbox" />
                     <header>
                         <time>13/07/2022 às 12:35</time>
                     </header>
@@ -154,7 +154,7 @@
             <h2>Tecnologia</h2>
             <div class="articles">
                 <article>
-                    <img src="./imagens/empresas.jpg" alt="Muitos dólares" />
+                    <img src="./imagens/empresas.jpg" alt="Tecnologia nas empresas" />
                     <header>
                         <time>13/07/2022 às 12:35</time>
                     </header>
@@ -165,7 +165,7 @@
                     <a href="#" title="Leia a notícia completa">Ler mais</a>
                 </article>
                 <article>
-                    <img src="./imagens/sem-tecnologia.jpg" alt="Várias notas de euro" />
+                    <img src="./imagens/sem-tecnologia.jpg" alt="Contato com a tecnologia" />
                     <header>
                         <time>13/07/2022 às 12:35</time>
                     </header>
@@ -176,7 +176,7 @@
                     <a href="#" title="Leia a notícia completa">Ler mais</a>
                 </article>
                 <article>
-                    <img src="./imagens/educação.jpeg" alt="Extração de petróleo" />
+                    <img src="./imagens/educação.jpeg" alt="Tecnologia na educação" />
                     <header>
                         <time>13/07/2022 às 12:35</time>
                     </header>
